// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AddAsset.vue [Custom Asset Tab]: should be rendered correctly 1`] = `
<wallet-base-stub
  resetfocus="AddAssetNFTfalse"
  showback="true"
  showheader="true"
  title="Add asset"
  tooltip=""
>
  <div
    class="add-asset"
  >
    <s-tabs-stub
      borderradius="small"
      position="top"
      type="rounded"
      usedesignsystem="true"
      value="AddAssetNFT"
    >
      <s-tab-stub
        label="Tokens"
        name="AddAssetToken"
      />
      <s-tab-stub
        label="NFTs"
        name="AddAssetNFT"
      />
    </s-tabs-stub>
     
    <keep-alive-stub>
      <addassetnft-stub />
    </keep-alive-stub>
  </div>
</wallet-base-stub>
`;

exports[`AddAsset.vue [Search Tab]: should be rendered correctly 1`] = `
<wallet-base-stub
  resetfocus="AddAssetTokenfalse"
  showback="true"
  showheader="true"
  title="Add asset"
  tooltip=""
>
  <div
    class="add-asset"
  >
    <s-tabs-stub
      borderradius="small"
      position="top"
      type="rounded"
      usedesignsystem="true"
      value="AddAssetToken"
    >
      <s-tab-stub
        label="Tokens"
        name="AddAssetToken"
      />
      <s-tab-stub
        label="NFTs"
        name="AddAssetNFT"
      />
    </s-tabs-stub>
     
    <keep-alive-stub>
      <addassettoken-stub />
    </keep-alive-stub>
  </div>
</wallet-base-stub>
`;
